updtaed ch4 of Guidelines paper with hydrological regime paper

--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -40,6 +40,22 @@
   langid = {english}
 }
 
+@article{beechieHydrologicRegimeConservation2006,
+  title = {Hydrologic Regime and the Conservation of Salmon Life History Diversity},
+  author = {Beechie, Timothy and Buhle, Eric and Ruckelshaus, Mary and Fullerton, Aimee and Holsinger, Lisa},
+  year = {2006},
+  month = jul,
+  journal = {Biological Conservation},
+  volume = {130},
+  number = {4},
+  pages = {560--572},
+  issn = {00063207},
+  doi = {10.1016/j.biocon.2006.01.019},
+  abstract = {Life history diversity of imperiled Pacific salmon Oncorhynchus spp. substantially contributes to their persistence, and conservation of such diversity is a critical element of recovery efforts. Preserving and restoring diversity of life history traits depends in part on environmental factors affecting their expression. We analyzed relationships between annual hydrograph patterns and life history traits (spawn timing, age at spawning, age at outmigration, and body size) of Puget Sound Chinook salmon (Oncorhynchus tshawytscha) to identify environmental indicators of current and historic diversity. Based on mean monthly flow patterns, we identified three hydrologic regimes: snowmelt-dominated, rainfall-dominated, and transitional. Chinook populations in snowmelt-dominated areas contained higher proportions of the stream-type life history (juvenile residence {$>$}1 year in freshwater), had older spawners, and tended to spawn earlier in the year than populations in rainfall-dominated areas. There are few extant Puget Sound populations dominated by the stream-type life history, as several populations with high proportions of stream-type fish have been extirpated by construction of dams that prevent migration into snowmelt-dominated reaches. The few extant populations are thus a high priority for conservation. The low level of genetic distinction between stream-type and ocean-type (juvenile residence {$<$}1 year in freshwater) life histories suggests that allowing some portion of extant populations to recolonize habitats above dams might allow re-expression of suppressed life history characteristics, creating a broader spatial distribution of the stream-type life history. Climate change ultimately may limit the effectiveness of some conservation efforts, as stream-type Chinook may be dependent on a diminishing snowmelt-dominated habitat.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\KIXLMD3T\\Beechie et al. - 2006 - Hydrologic regime and the conservation of salmon l.pdf}
+}
+
 @article{bergerCharacterTemporalVariability2019,
   title = {Character of Temporal Variability in Stock Productivity Influences the Utility of Dynamic Reference Points},
   author = {Berger, Aaron M.},
@@ -99,6 +115,16 @@
   pages = {214},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\FUJCLK5Y\\Brown et al. - 2020 - 2020 Summary of Abundance Data for Chinook Salmon .pdf}
+}
+
+@techreport{caddyReferencePointsFisheries1995,
+  title = {Reference Points for Fisheries Management},
+  author = {Caddy, J.F. and Mahon, R.},
+  year = {1995},
+  number = {FAO Fisheries Technical Paper. No. 347},
+  pages = {83p.},
+  address = {{Rome}},
+  institution = {{FAO}}
 }
 
 @techreport{canadaHarvestStrategyCompliant2006,
@@ -321,6 +347,22 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\BT3KTNQI\\Dowling et al. - 2015 - Empirical harvest strategies for data-poor fisheri.pdf}
 }
 
+@article{eckertDivingBackTime2018,
+  title = {Diving Back in Time: Extending Historical Baselines for Yelloweye Rockfish with {{Indigenous}} Knowledge},
+  shorttitle = {Diving Back in Time},
+  author = {Eckert, Lauren E. and Ban, Natalie C. and Frid, Alejandro and McGreer, Madeleine},
+  year = {2018},
+  month = feb,
+  journal = {Aquatic Conservation: Marine and Freshwater Ecosystems},
+  volume = {28},
+  number = {1},
+  pages = {158--166},
+  issn = {10527613},
+  doi = {10.1002/aqc.2834},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\2DLCCA89\\Eckert et al. - 2018 - Diving back in time Extending historical baseline.pdf}
+}
+
 @article{edwardsPacificOceanPerch2014,
   title = {Pacific {{Ocean Perch}} ({{{\emph{Sebastes}}}}{\emph{ Alutus}}) Stock Assessment for the North and West Coasts of {{Haida Gwaii}}, {{British Columbia}}},
   author = {Edwards, Andrew M and Haigh, Rowan and Starr, Paul J},
@@ -487,6 +529,21 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\Z2FEH4G7\\37_326_1_SM.pdf}
 }
 
+@article{leeDiverseKnowledgeSystems2019,
+  title = {Diverse Knowledge Systems Reveal Social\textendash Ecological Dynamics That Inform Species Conservation Status},
+  author = {Lee, Lynn Chi and Thorley, Joe and Watson, Jane and Reid, Mike and Salomon, Anne Katherine},
+  year = {2019},
+  month = mar,
+  journal = {Conservation Letters},
+  volume = {12},
+  number = {2},
+  issn = {1755-263X, 1755-263X},
+  doi = {10.1111/conl.12613},
+  abstract = {Understanding changes over historical timescales is essential to gauge conservation status of a species. Modern ecological data typically neglect past magnitudes of change, which fortunately can be evaluated by bridging disparate knowledge sources. We synthesized zooarchaeological, historical, traditional, and western science knowledge to document changes in relative abundance of key species in Canada's northern abalone social\textendash ecological system (SES) from the Holocene to present. Integrated models fit to traditional and western science data revealed 3.7\% annual population decline from 1940s to 2010s for large abalone, although traditional knowledge density estimates were 9.5\texttimes{} higher than those derived from western science. Abalone are presently scarce compared to the mid-1900s, but more abundant than before the early 1800s, calling their endangered status into question. Linking multiple knowledge sources can build SES understanding, facilitate power sharing, and support ecologically sustainable and socially just conservation outcomes.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\V8DR5IBU\\Lee et al. - 2019 - Diverse knowledge systems reveal social–ecological.pdf}
+}
+
 @article{malickRegionalScaleDeclinesProductivity2016,
   title = {Regional-{{Scale Declines}} in {{Productivity}} of {{Pink}} and {{Chum Salmon Stocks}} in {{Western North America}}},
   author = {Malick, Michael J. and Cox, Sean P.},
@@ -510,6 +567,31 @@
   pages = {105},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\FK4GYX9L\\Marentette et al. - Specification of Precautionary Approach Reference .pdf}
+}
+
+@article{mckechnieArchaeologicalDataProvide2014,
+  title = {Archaeological Data Provide Alternative Hypotheses on {{Pacific}} Herring ( {{{\emph{Clupea}}}}{\emph{ Pallasii}} ) Distribution, Abundance, and Variability},
+  author = {McKechnie, Iain and Lepofsky, Dana and Moss, Madonna L. and Butler, Virginia L. and Orchard, Trevor J. and Coupland, Gary and Foster, Fredrick and Caldwell, Megan and Lertzman, Ken},
+  year = {2014},
+  month = mar,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {111},
+  number = {9},
+  pages = {E807-E816},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1316072111},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\DPIDT48L\\McKechnie et al. - 2014 - Archaeological data provide alternative hypotheses.pdf}
+}
+
+@techreport{medingerEcosystemsBritishColumbia1991,
+  title = {Ecosystems of {{British Columbia}}},
+  author = {Medinger, D and Pojar, J},
+  year = {1991},
+  number = {British Columbia Ministry of Forests Special Report Series 6},
+  pages = {330},
+  address = {{Victoria, BC}},
+  institution = {{British Columbia Ministry of Forests}}
 }
 
 @article{mullowneyBasisPrecautionaryApproach2018,
@@ -593,6 +675,21 @@
   abstract = {Limit reference points'' define a state at which fishery management has reached overfishing, overfished stock status, or some other regulatory or conservation point of concern. In many Pacific salmon Oncorhynchus spp. fishery jurisdictions, management only uses ``target reference points''\textemdash the specific numerical management objective intended to bring about some fishery benefit. There are several reasons to adopt limit reference points, and jurisdictions without previously defined limit reference points could adopt them in order to align better with the Magnuson\textendash Stevens Act (American fisheries) or, more importantly, to facilitate cross-jurisdiction sustainability assessments, which are increasingly needed for certifications of sustainability. In actual practice, the stock size of 0.5 times a target reference point has been used as a limit reference point for some Pacific salmon fisheries, or at least as a proxy for a limit reference point. We term this point the ``minimum stock size threshold,'' following a convention already in use, and we note that limit reference points defined this way are increasingly being accepted as a standard either because of justification based on simulation and fishery principles or for purely pragmatic reasons.},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\F69BSGJP\\Portley and Geiger - 2014 - Limit Reference Points for Pacific Salmon Fisherie.pdf}
+}
+
+@article{priceGeneticsCenturyOld2019,
+  title = {Genetics of Century-old Fish Scales Reveal Population Patterns of Decline},
+  author = {Price, Michael H.H. and Connors, Brendan M. and Candy, John R. and McIntosh, Brenda and Beacham, Terry D. and Moore, Jonathan W. and Reynolds, John D.},
+  year = {2019},
+  month = nov,
+  journal = {Conservation Letters},
+  volume = {12},
+  number = {6},
+  issn = {1755-263X, 1755-263X},
+  doi = {10.1111/conl.12669},
+  abstract = {Conservation scientists rarely have the information required to understand changes in abundance over more than a few decades, even for important species like Pacific salmon. Such lack of historical information can underestimate the magnitude of decline for depressed populations. We applied genetic tools to a unique collection of 100-year-old salmon scales to reveal declines of 56\%\textendash 99\% in wild sockeye populations across Canada's second largest salmon watershed, the Skeena River. These analyses reveal century-long declines that are much greater than those based on modern era abundance data, which suggested that only 7 of 13 populations declined over the last five decades. Populations of larger-bodied fish have declined the most in abundance, likely because of size-selective commercial fisheries. Our findings illustrate how a deep historical perspective can expand our understanding of past abundances to a time before species incurred significant losses from fishing, and help inform conservation for diminished populations.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\ZIJLSLSQ\\Price et al. - 2019 - Genetics of century‐old fish scales reveal populat.pdf}
 }
 
 @article{puntFisheriesManagementClimate2014,
