revised references to FAZs in Ch4 of Guidelines  paper

--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -594,6 +594,13 @@
   institution = {{British Columbia Ministry of Forests}}
 }
 
+@misc{ministryoftheenvironmentEcologicalAquaticUnits2021,
+  title = {Ecological {{Aquatic Units}} of {{British Columbia}} ({{EAUBC}}) ({{Theme}})},
+  author = {{Ministry of the Environment}},
+  year = {2021},
+  publisher = {{Knowledge Management Branch, Ministry of the Environment, British Columbia}}
+}
+
 @article{mullowneyBasisPrecautionaryApproach2018,
   title = {Basis for {{A Precautionary Approach}} and {{Decision Making Framework}} for the {{Newfoundland}} and {{Labrador Snow Crab}} ({{Chionoecetes}} Opilio) {{Fishery}}},
   author = {Mullowney, D and Baker, K and Pedersen, E and Osborne, D},
