--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -16,7 +16,7 @@ To be completed.
 At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark ($S_{gen}$ or percentiles) resulted in similar status assessments to using the Rapid Multidimensional Scanning Tool. <!--BC:These sentences seem to contradict themselves. -->  These similarities occur because when the lower benchmarks estimates are available, the rapid multidimensional scanning tool will almost always default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the Interior Fraser Coho study case for 1 CU in 3 years<!--correct me I'm wrong on numbers here KH-->. In these cases, the Rapid Multidimensional Scanning Tool triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached. 
 
 
-In addition, we found that using the Rapid Multidimensional Scanning Tool allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Rapid Multidimensional Scanning Tool is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast case study. <!--CW: added the following to emphasize the importance of assessing more CUs -->  The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CU with low levels of synchrony that cannot be represented by proxy. In addition, small CUs are also difficult to represent by proxy, as the small CUs tend to be more vulnerable than larger CUs even if productivity is similar (cite). 
+In addition, we found that using the Rapid Multidimensional Scanning Tool allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Rapid Multidimensional Scanning Tool is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast Chum case study. <!--CW: added the following to emphasize the importance of assessing more CUs -->  The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CU with low levels of synchrony in which data deficient CUs cannot be represented by proxy. The status assessment based on trends is also useful when the CUs lacking lower benchmark estimates are small. Representing small CUs by proxy is problematic because the small CUs tend to be more vulnerable than larger CUs even if productivity is similar (cite). 
 
 <!--CH: this section needs to be informed by a discussion of CU-representativeness within each SMU (i.e., 4 criteria outlines in Ch 4 of Guidelines WP). My guess is that for WCVI CK, the threats are different enough that we could expect independent dynamics, e.g., not representative of each other, and this is likely the same for ISC chum. However, I'm not sure about IFR coho; the one v small CU might be considered independent of the others because it's so small, but the remaining 4 might be sufficiently similar to be representative?. 
 
