CH further work on ch1 of Guidelines paper

--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -280,6 +280,18 @@
   langid = {english}
 }
 
+@article{dfoManagementProcedureFramework2021,
+  title = {A {{Management Procedure Framework}} for {{Groundfish In British Columbia}}},
+  author = {DFO},
+  year = {2021},
+  journal = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
+  volume = {2021/002},
+  pages = {17},
+  abstract = {For data-limited stocks, data are often insufficient to use traditional stock assessments to determine stock status relative to biological reference points.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\5P7KAL8R\\A Management Procedure Framework for Groundfish In.pdf}
+}
+
 @techreport{dfoScienceAdvicePrecautionary2021,
   type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}},
   title = {Science {{Advice}} for {{Precautionary Approach Harvest Strategies}} under the {{Fish Stocks Provisions}}},
@@ -483,6 +495,12 @@
   abstract = {The goal of Canada's Wild Salmon Policy (WSP) is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity. To achieve that goal, the WSP requires that biological status be assessed for all geographically, ecologically, and genetically distinct populations, or Conservation Units (CUs). One component of that assessment is identifying quantifiable metrics of biological status and benchmarks along those metrics. Here, we provide a toolkit of metrics and benchmarks of status, which will set the stage for future CU assessments. Specifically, we propose a multi-criteria approach for assessing status that uses information on current abundances, trends in abundance over time, distribution of spawners, and fishing mortality relative to stock productivity. That approach captures the multiple dimensions of population status that will be important to achieve WSP goals better than assessments based on abundances alone. Furthermore, any redundancy in information content among criteria may allow for increased flexibility when assessing stocks that differ widely in data quantity and quality. Here, we identify quantifiable metrics and candidate benchmarks drawn from the scientific literature and previous management experience. Using a simulation model, we further evaluate a subset of those benchmarks on two performance metrics: the probability of extirpation over the long term and the probability of recovery to a target. Finally, we apply those metrics and candidate benchmarks to two example CUs, Takla/Trembleur sockeye salmon (Early Stuart run-timing group of the Fraser River) and Hecate Strait Lowlands pink salmon (odd year).},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\MHF9YRE8\\Holt et al. - 2009 - Indicators of Status and Benchmarks for Conservati.pdf}
+}
+
+@techreport{hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009,
+  title = {Columbia {{River Hatchery Reform SystemWide Report}}},
+  author = {HSRG (Hatchery Scientific Review Group)},
+  year = {2009}
 }
 
 @book{huangRecoveryPotentialAssessment2021,
@@ -724,6 +742,38 @@
   month = jan,
   publisher = {{Oxford University Press}},
   abstract = {Open access (or the " tragedy of the commons ") is a well-known explanation of fish stock depletion and of overcapacity. This chapter focuses on the complexity of proper management of the commons, specifically, policies to control total allowable catch (TAC) and total harvesting capacity: what are the major challenges, why is it easy for policy makers to misperceive, and how can communication be improved to ensure more rapid learning? Section 45.2 deals with the problem of overcapacity and resource depletion in the process of adapting fishing industries to resource limits. Section 45.3 considers " steady-state " strategies for controlling TAC and total capacity in fisheries with environmental variation. Section 45.4 deals with implications of assessment error for steady-state policies. Finally, section 45.5 discusses boundaries of models and methods and calls for balanced interdisciplinary analysis, and section 45.6 concludes.}
+}
+
+@article{scheuerellIntegratedPopulationModel2021,
+  title = {An Integrated Population Model for Estimating the Relative Effects of Natural and Anthropogenic Factors on a Threatened Population of Steelhead Trout},
+  author = {Scheuerell, Mark D. and Ruff, Casey P. and Anderson, Joseph H. and Beamer, Eric M.},
+  editor = {Grantham, Hedley},
+  year = {2021},
+  month = jan,
+  journal = {Journal of Applied Ecology},
+  volume = {58},
+  number = {1},
+  pages = {114--124},
+  issn = {0021-8901, 1365-2664},
+  doi = {10.1111/1365-2664.13789},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\SITPEASH\\Scheuerell et al. - 2021 - An integrated population model for estimating the .pdf}
+}
+
+@article{statonIncorporatingDemographicInformation2021,
+  title = {Incorporating Demographic Information into Spawner\textendash Recruit Analyses Alters Biological Reference Point Estimates for a Western {{Alaska}} Salmon Population},
+  author = {Staton, Benjamin A. and Catalano, Matthew J. and Fleischman, Steven J. and Ohlberger, Jan},
+  year = {2021},
+  month = dec,
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  volume = {78},
+  number = {12},
+  pages = {1755--1769},
+  issn = {0706-652X, 1205-7533},
+  doi = {10.1139/cjfas-2020-0478},
+  abstract = {Changes over time in age, sex, and length-at-age of returning Pacific salmon have been widely observed, suggesting concurrent declines in per capita reproductive output. Thus, assessment models assuming stationary reproductive output may inaccurately estimate biological reference points that inform harvest policies. We extended age-structured state-space spawner\textendash recruit models to accommodate demographic time trends and fishery selectivity to investigate temporal changes in reference points using Kuskokwim River Chinook salmon (Oncorhynchus tshawytscha). We illustrate that observed demographic changes have likely reduced per capita reproductive output in an additive manner, for example, models including changes in both length-at-age and age composition showed larger declines than models incorporating only one time trend. Translated into biological reference points using a yield-per-recruit algorithm, we found escapement needed for maximum sustained catch has likely increased over time, but the magnitude further depended on size-selective harvest (i.e., larger increases for reference points based on larger mesh gillnets). Compared to traditional salmon assessments, our approach that acknowledges demographic time trends allows more complete use of available data and facilitates evaluating trade-offs among gear-specific harvest policies.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\SHMSYNZE\\Staton et al. - 2021 - Incorporating demographic information into spawner.pdf}
 }
 
 @article{szuwalskiClimateChangeNonstationary2016,
